--- a/dispatch/templates/dispatch/daily_driving_list.html
+++ b/dispatch/templates/dispatch/daily_driving_list.html
@@ -85,7 +85,7 @@
     </div>
 </body>
 
-<script src="{% static 'js/dispatch/bus_Print.js' %}"></script>
-<script src="{% static 'js/dispatch/printCheck.js' %}"></script>
+<script src="{% static 'js/dispatch/before/bus_Print.js' %}"></script>
+<script src="{% static 'js/dispatch/before/printCheck.js' %}"></script>
 
 </html>
