--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -328,11 +328,12 @@
       <div class="RouteListHead">
         <span>{{group.name}}</span>
         <div class="RouteListHeadBtnBox">
+          <div class="btnModules dispatchPrintBtn">인쇄</div>
           <div class="btnModules dispatchDeletBtn">배차삭제</div>
           <input autocomplete="off" type="submit" class="btnModules dispatchSaveBtn" value="저장">
           <div class="btnModules dispatchHistory">배차내역</div>
-          <div class="btnModules">2주 전 배차 불러오기</div>
-          <div class="btnModules">1주 전 배차 불러오기</div>
+          <div class="btnModules">지난배차(2주전)</div>
+          <div class="btnModules">지난배차(1주전)</div>
           <div class="btnModules">액셀 내려받기</div>
         </div>
       </div>
