--- a/templates/base.html
+++ b/templates/base.html
@@ -130,7 +130,7 @@
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
                 <a href="{% url 'vehicle:list' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">차량관리</li>
+                  <li class="sideMenuNav2Menu">차량목록</li>
                 </a>
                 <a href="{% url 'vehicle:maintenance' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">정비관리</li>
