--- a/static/css/accounting/collect.css
+++ b/static/css/accounting/collect.css
@@ -303,6 +303,10 @@
 
 
 /* 입금내역 불러오기 팝업 */
+.collectingPopupContainer{
+    width: 86rem;
+}
+
 .popupSearch {
     display: flex;
     align-items: center;
@@ -335,16 +339,20 @@
 }
 
 .popupArticleCollectiong td:nth-child(1),
+.popupArticleCollectiong td:nth-child(2){
+    width: 14%;
+}
+.popupArticleCollectiong td:nth-child(4),
+.popupArticleCollectiong td:nth-child(6){
+    width: 13%;
+}
+
 .popupArticleCollectiong td:nth-child(3) {
-    width: 20%;
+    width: 8%;
 }
 
-.popupArticleCollectiong td:nth-child(2) {
-    width: 10%;
-}
-
-.popupArticleCollectiong td:nth-child(4) {
-    width: 50%;
+.popupArticleCollectiong td:nth-child(5) {
+    width: 38%;
 }
 
 .collectingPopupHeader {
