--- a/static/css/homepage/home.css
+++ b/static/css/homepage/home.css
@@ -622,7 +622,7 @@ header {
   background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(175, 212, 252, 1) 100%);
 }
 
-.fourthSectionArticle{
+.fourthSectionArticle {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -630,10 +630,24 @@ header {
   height: 52.7rem;
 }
 
+.fourthSectionTitle {
+  font-size: 4.6rem;
+  font-weight: 700;
+  color: #0069D9;
+}
 
+.fourthSectionSubTitle {
+  font-size: 2.4rem;
+  font-weight: 500;
+  color: #0069D9;
+}
 
-
-/*fifthContents*/
+.fourthSectionContents {
+  font-size: 2rem;
+  font-family: "Noto Sans CJK KR";
+  line-height: 3.2rem;
+  margin-top: 10rem;
+}
 
 
 
@@ -643,12 +657,11 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: calc(100vw - 1.7rem);
-  /* height: 6.4rem; */
-  height: 0;
+  width: 100vw;
+  height: 6.4rem;
   font-size: 1.2rem;
   color: white;
-  background-color: #333333;
+  background-color: #444;
 }
 
 footer div {
