--- a/vehicle/templates/vehicle/list.html
+++ b/vehicle/templates/vehicle/list.html
@@ -175,8 +175,8 @@
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">차량번호</label>
                         <div class="vehicleNumBox">
-                            <input autocomplete="off" name="vehicle_num0" type="text" class="popupArticleinput">
-                            <input autocomplete="off" name="vehicle_num" type="text" class="popupArticleinput">
+                            <input autocomplete="off" name="vehicle_num0" type="text" class="popupArticleinputTwice">
+                            <input autocomplete="off" name="vehicle_num" type="text" class="popupArticleinputTwice">
                         </div>
                     </div>
                     <div class="popupArticleDouble">
@@ -255,7 +255,7 @@
                         <label for="" class="popupArticleLabel">차량등록증</label>
                         <div class="popupArticleFileDouble">
                             <label for="BusLicenseFile">파일 선택</label>
-                            <input autocomplete="off" name="vehicle_registration" id="BusLicenseFile" type="file" class="popupArticleinputBusLicenseFileinput">
+                            <input autocomplete="off" name="vehicle_registration" id="BusLicenseFile" type="file" class="popupArticleinput BusLicenseFileInput">
                             <input autocomplete="off" type="text" class="BusLicenseFileText" readonly>
                             <svg class="fileDeleteBtn" xmlns="http://www.w3.org/2000/svg" width="11.314" height="11.314"
                                 viewBox="0 0 11.314 11.314">
@@ -371,8 +371,8 @@
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">차량번호</label>
                         <div class="vehicleNumBox">
-                            <input autocomplete="off" name="vehicle_num0" type="text" class="popupArticleinputvehicleNum1">
-                            <input autocomplete="off" name="vehicle_num" type="text" class="popupArticleinputvehicleNum2">
+                            <input autocomplete="off" name="vehicle_num0" type="text" class="popupArticleinputTwice vehicleNum1">
+                            <input autocomplete="off" name="vehicle_num" type="text" class="popupArticleinputTwice vehicleNum2">
                         </div>
                     </div>
                     <div class="popupArticleDouble">
@@ -388,7 +388,7 @@
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">제조사</label>
-                        <input autocomplete="off" name="maker" type="text" class="popupArticleinputmaker">
+                        <input autocomplete="off" name="maker" type="text" class="popupArticleinput maker">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">사용여부</label>
@@ -451,7 +451,7 @@
                         <label for="" class="popupArticleLabel">차량등록증</label>
                         <div class="popupArticleFileDouble">
                             <label for="BusLicenseFileEdit">파일 선택</label>
-                            <input autocomplete="off" name="vehicle_registration" id="BusLicenseFileEdit" type="file" class="popupArticleinput BusLicenseFileinputEdit">
+                            <input autocomplete="off" name="vehicle_registration" id="BusLicenseFileEdit" type="file" class="popupArticleinput BusLicenseFileInputEdit">
                             <input autocomplete="off" type="text" class="BusLicenseFileTextEdit" readonly>
                             <svg class="fileDeleteBtn" xmlns="http://www.w3.org/2000/svg" width="11.314" height="11.314"
                                 viewBox="0 0 11.314 11.314">
